Fixes to bulleted list font color on dark mode

--- a/themes/san-diego/source/styles/_project.scss
+++ b/themes/san-diego/source/styles/_project.scss
@@ -619,7 +619,7 @@ body.loaded .project-wrapper {
 
 		ul,
 		ol {
-			color: variables.$text-color-dark;
+			color: hsl(24, 4.49%, 78.01%);
 		}
 	}
 
